fixed posts being covered by header

--- a/wp/wp-content/themes/roots/assets/css/base.css
+++ b/wp/wp-content/themes/roots/assets/css/base.css
@@ -302,6 +302,10 @@ line-height: 2em
   border-bottom: none;
 }
 
+article.type-post{
+  padding-top: 110px;
+}
+
 /* Footer */
 
 footer{
